Fixed iPhone layout bug.

--- a/src/stylesheets/julian.less
+++ b/src/stylesheets/julian.less
@@ -31,12 +31,15 @@ body {
 
 #links {
   margin: 0 auto;
-  padding-top: 15px;  
-  //font-size: 1.5em;
+  padding-top: 15px;
   font-size: 2em;
   text-align: center;
-  width: 18.1em;
+  width: 16.1em;
   height: 4em;
+
+  ul {
+    margin-left: 0em;
+  }
 
   .nav-item {
     margin: 0em 1em;
@@ -142,7 +145,7 @@ h3 {
 
   img {
     margin-left: -1em;
-    margin-right: 2em;
+    //margin-right: 2em;
     border-radius: 1.5em;
   }
 
